--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Logbook.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     }
@@ -46,19 +47,6 @@
       "source": [
         "# Rasmus and Viktor Logbook"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tXCAdlOgOF5_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -107,9 +95,9 @@
         "## 2020 - 04 - 13\n",
         "**Aim**: Download kaggle dataset, comm_use_subset_100 dataset and set up BioBERT environment.\n",
         "\n",
-        "**Result**: \n",
+        "**Result**: Downloaded the datasets. Have started working on Colab and understand how it works. Still working on setting up BioBERT environment.\n",
         "\n",
-        "**Next Step**:\n",
+        "**Next Step**: Set up BioBERT enviroment in Colab.\n",
         "\n"
       ]
     },
@@ -133,8 +121,26 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "\n",
+        "We had some struggles setting up BioBERT. We had to re-think how our final enviroment should look like. The biggest issue lied in that Colab requires us to set up the enviroment every time, so we wanted to make this process as smooth as possible. \n",
+        "\n",
+        "We will have Colab, google drive and a git as our main enviroment. On git we will have all required files needed for our Colab setup. In drive we will have our Colab notebooks, and from there we can save them to git so that we can show our progress continuously.\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gQZUipy5kWto",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
