--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -130,6 +130,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dwPLSYFaOamq",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2020 - 04 - 27\n",
+        "**Aim**: Setup working BioBERT enviroment\n",
+        "\n",
+        "**Result**: Downloaded the datasets. Have started working on Colab and understand how it works. Still working on setting up BioBERT environment.\n",
+        "\n",
+        "**Next Step**: Set up BioBERT enviroment in Colab.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ddywAWwiOlrT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once again, we have struggled a bit with setting up the BioBERT enviroment. We wanted to avoid needing to authorize to google drive every time we wanted to run the environment. As mentioned in previous entry the plan was to have all the files needed on git. Though we have realized that due to the size of some of the files, for example the pretrained weights, this is not possible. Therefore we have gone back to the solution to store most of the stuff on a google drive and load everthing from there."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gQZUipy5kWto",
