--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -139,9 +139,9 @@
         "## 2020 - 04 - 27\n",
         "**Aim**: Setup working BioBERT enviroment\n",
         "\n",
-        "**Result**: Downloaded the datasets. Have started working on Colab and understand how it works. Still working on setting up BioBERT environment.\n",
+        "**Result**: We have run BioBert on the RE and NER train datasets but we have some trouble converting the comm_use_subset_100 JSON data format to the tsv format that BioBERT requires.\n",
         "\n",
-        "**Next Step**: Set up BioBERT enviroment in Colab.\n"
+        "**Next Step**: Figure out how to convert the data to the required format.\n"
       ]
     },
     {
@@ -155,9 +155,110 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W1cYkLqA6G5f",
+        "colab_type": "text"
+      },
+      "source": [
+        "BioBERT github link: https://github.com/dmis-lab/biobert?fbclid=IwAR24HALSNntfFeZS3vWSjVRSVTJqsy56wuJS-KOZIwUNn0loVPVQ-waYTLM. We followed the instructions for RE and will now start looking at NER.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3RnnX_2-jTfg",
+        "colab_type": "text"
+      },
+      "source": [
+        "Running the large pretrained weights we got an OOM-error. So instead we resorted to the base pretrained weights. We managed to run the base pretrained BioBERT weights on relationship extraction. For the first GAD data set, with three epochs, this was the results:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Rp7I5p8jrvp",
+        "colab_type": "text"
+      },
+      "source": [
+        "f1 score    : 83.42%\n",
+        "\n",
+        "recall      : 90.39%\n",
+        "\n",
+        "precision   : 77.44%\n",
+        "\n",
+        "specificity : 70.75%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c0ng57Ebm5zQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "For GAD/2 with 3 epochs:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UZezxU57m9Q8",
+        "colab_type": "text"
+      },
+      "source": [
+        "f1 score    : 83.01%\n",
+        "\n",
+        "recall      : 90.71%\n",
+        "\n",
+        "precision   : 76.51%\n",
+        "\n",
+        "specificity : 69.17%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zGW3lJaox4mE",
+        "colab_type": "text"
+      },
+      "source": [
+        "For GAD/2 with 10 epochs:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ld9AlyHNyB52",
+        "colab_type": "text"
+      },
+      "source": [
+        "f1 score    : 81.55%\n",
+        "\n",
+        "recall      : 82.86%\n",
+        "\n",
+        "precision   : 80.28%\n",
+        "\n",
+        "specificity : 77.47%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "puupPhbqP05L",
+        "colab_type": "text"
+      },
+      "source": [
+        "Resource links:\n",
+        "\n",
+        "https://medium.com/@seannaren/cord-19-ann-semantic-search-engine-using-s-bert-aebc5bcc5442 - CORD-19 using BioBERT"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "gQZUipy5kWto",
+        "id": "4N3VhXo3P9em",
         "colab_type": "code",
         "colab": {}
       },
