--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -172,7 +172,19 @@
         "colab_type": "text"
       },
       "source": [
-        "Running the large pretrained weights we got an OOM-error. So instead we resorted to the base pretrained weights. We managed to run the base pretrained BioBERT weights on relationship extraction. For the first GAD data set, with three epochs, this was the results:"
+        "Running the large pretrained weights we got an OOM-error. So instead we resorted to the base pretrained weights. We managed to run the base pretrained BioBERT weights on relationship extraction. For the first GAD data set (downloaded from: https://drive.google.com/file/d/1-jDKGcXREb2X9xTFnuiJ36PvsqoyHWcw/view), with three epochs, this was the results:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AHSgmBQVdZ_N",
+        "colab_type": "text"
+      },
+      "source": [
+        "**GAD Corpora**\n",
+        "\n",
+        "The corpus contains annotations on the relashionship between genes and deseases and has been developed from the Genetic Association Database (GAD)."
       ]
     },
     {
@@ -252,13 +264,64 @@
       "source": [
         "Resource links:\n",
         "\n",
-        "https://medium.com/@seannaren/cord-19-ann-semantic-search-engine-using-s-bert-aebc5bcc5442 - CORD-19 using BioBERT"
+        "https://medium.com/@seannaren/cord-19-ann-semantic-search-engine-using-s-bert-aebc5bcc5442 - CORD-19 using BioBERT\n",
+        "\n",
+        "https://drive.google.com/file/d/1-jDKGcXREb2X9xTFnuiJ36PvsqoyHWcw/view - Relation extraction data (GAD)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3v7SZ5g5fDoE",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2020 - 05 - 04\n",
+        "**Aim**: Run BioBERT NER on the comm_use_subset And create Pubannotation output\n",
+        "\n",
+        "**Result**: We managed to produce the results in pubannotations but looking at the files we noticed that the denotations \"id\" and \"obj\" were different to the gold standard examples in the BioNLP repository, we need to talk to Sonja about this\n",
+        "\n",
+        "**Next Step**: Talk to Sonja and discuss our results and about the next step in the project\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3lXkHv8Rfiwu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Antton gave us his python script for generating txt-files from the json format so the first step today is to generate all the right formats for BioBERT. https://github.com/AnttonLA/BINP37/blob/master/dataset_generation/json_to_txt.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "85X5VJoyjjO9",
+        "colab_type": "text"
+      },
+      "source": [
+        "When we have the txt-files we can run the BioBERT NER to generate the NER evaluation that we will have to restructure into Pubannotation. https://github.com/AnttonLA/BINP37/blob/master/output_generation/eval_to_pubannot.py\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eC-HGe55ZI8E",
+        "colab_type": "text"
+      },
+      "source": [
+        "First the model was trained on the BC5CDR-Chem data downloaded from the NER train data found on link: https://drive.google.com/file/d/1OletxmPYNkz2ltOr9pyT0b0iBtUWxslh/view. The trained model was then used to find named entity on the comm_use_subset_100 in txt format that we created using Antton's convertion script json_to_txt.py.\n",
+        "Finally the evaluation was detokenized and transformed to pubannotations using Anttons's eval_to_pubanot.py script found in the link above."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4N3VhXo3P9em",
+        "id": "DyNPVDGnbe9p",
         "colab_type": "code",
         "colab": {}
       },
