--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -319,6 +319,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0Y-XWPN0T9xJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2020 - 05 - 07\n",
+        "**Aim**: We now need to create a tsv file with CLS tokens for the subset to do relationship extraction on it.\n",
+        "\n",
+        "**Result**: Notebook and git now up. Learnt a lot about NLP in general, and relation extraction and BioBERT specifically. Though a lot of more reading to be done.\n",
+        "\n",
+        "**Next Step**: Keep on reading up on relation extraction and BioBERT. Start setting everything up on our computers.\n",
+        "\n",
+        "Articles read:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6O2mhgSiUjWN",
+        "colab_type": "text"
+      },
+      "source": [
+        "We had a bit of struggle understanding how to be able to convert the files to TSV. With some discussion with Sonja we have concluded that Anton will provide us with the NER-files for gene and disease as a starting point. We will then combine these and split them into sentences. We will discard any sentences not having both of the entities and then create a TSV file."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DyNPVDGnbe9p",
