--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -346,6 +346,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pz9xpWppLlXp",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2020 - 05 - 10\n",
+        "**Aim**: Run the Relation extraction on disease and gene NER data recieved from Antton \n",
+        "\n",
+        "**Result**: We successfully ran RE on the comm_use_subset and got an output file.\n",
+        "\n",
+        "**Next Step**: Upload the results to the common git repo. Add \"Relations\" annotation to pubannotation.\n",
+        "\n",
+        "We used our scripts combine_pubannot.py and PUBAnno_to_tsv.py https://github.com/rasmusli/EDAN70-relationextraction/tree/master/tsv_generation \n",
+        "\n",
+        "In the pubanno_to_tsv script we removed all sentences that did not include both a gene and a deasease entity.\n",
+        "\n",
+        "We ran the biobert RE on the subset before and after fine tuning and the results looked promising"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n8wW_YgxvP5d",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2020 - 05 - 14\n",
+        "**Aim**: Run fine tuning on all GAD corporas and store evaluation in an evaluation table\n",
+        "\n",
+        "**Result**: We recieved results on all 10 GAD corpora but could not upload to github due to push access.\n",
+        "\n",
+        "**Next Step**: Figure out how to run evaluation on the commm_subset_100\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DyNPVDGnbe9p",
