--- a/Logbook.ipynb
+++ b/Logbook.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rasmusli/EDAN70-relationextraction/blob/master/Logbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rasmusli/NLP-relationextraction/blob/master/Logbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -76,6 +76,8 @@
         "- https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-019-2604-0 - Performance study, diff. teqn.\n",
         "- https://www.youtube.com/watch?v=nC9_RfjYwqA - Stanford depency parsing lecture\n",
         "- https://academic.oup.com/bioinformatics/article/36/4/1234/5566506 - BioBERT\n",
+        "\n",
+        "- Bert model structure - http://jalammar.github.io/illustrated-bert/\n",
         "\n",
         "Also read previous work on relation ship extraction done by:\n",
         "- Vilhelm Lundqvist and Olof Nordengren\n",
@@ -325,7 +327,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 2020 - 05 - 07\n",
+        "## 2020 - 05 - 07\n",
         "**Aim**: We now need to create a tsv file with CLS tokens for the subset to do relationship extraction on it.\n",
         "\n",
         "**Result**: Notebook and git now up. Learnt a lot about NLP in general, and relation extraction and BioBERT specifically. Though a lot of more reading to be done.\n",
@@ -352,7 +354,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 2020 - 05 - 10\n",
+        "## 2020 - 05 - 10\n",
         "**Aim**: Run the Relation extraction on disease and gene NER data recieved from Antton \n",
         "\n",
         "**Result**: We successfully ran RE on the comm_use_subset and got an output file.\n",
@@ -373,7 +375,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 2020 - 05 - 14\n",
+        "## 2020 - 05 - 14\n",
         "**Aim**: Run fine tuning on all GAD corporas and store evaluation in an evaluation table\n",
         "\n",
         "**Result**: We recieved results on all 10 GAD corpora but could not upload to github due to push access.\n",
@@ -383,9 +385,70 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EPHp2wpP5E18",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2020 - 05 - 19\n",
+        "**Aim**: Finish the script that generates a test.tsv file for the combined NER annotations from antton \n",
+        "\n",
+        "**Result**: \n",
+        "\n",
+        "**Next Step**: \n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cW0NEgwpliHM",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Notes from meeting about the article:\n",
+        " - Run the evaluation on the cord19 corpora for all generated models from the GAD/euadr, and check the results agaist each other, Union/Intersection\n",
+        " - In the discussion choose some relations that they all agree on and discuss the result\n",
+        " - Aim of the paper: run the evaluation on the CORD19 corpora but since there are no annotated relations validate our model on the GAD corpora.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "whVaML2njtYH",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2020 - 05 - 20\n",
+        "**Aim**: Run evaluation of GAD model on euadr data and euadr model on GAD data\n",
+        "\n",
+        "**Result**: As expeted did the model trained on GAD give a better f1 score since its tranied on a larger data set.\n",
+        "\n",
+        "**Next Step**: Run the model with the best score on the comm 100 subset."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GWgfJhr4k392",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2020 - 05 - 21\n",
+        "**Aim**: Run the relation extraction in the comm 100 subset with all GAD models. Produce relations based on the union and the intersectionof all models. and send the results to sonja so she can perform a manual check.\n",
+        "\n",
+        "**Result**: \n",
+        "\n",
+        "**Next Step**: "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "DyNPVDGnbe9p",
+        "id": "k0D7G2KtldM8",
         "colab_type": "code",
         "colab": {}
       },
